kubernetes/adb-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: adb
  labels:
    app: adb
spec:
  containers:
    - name: adb
      image: sorccu/adb:latest
      imagePullPolicy: IfNotPresent
      securityContext:
        privileged: true
      ports:
        - name: adb-tcp
          containerPort: 5037
          protocol: TCP
#      readinessProbe:
#        httpGet:
#          path: /
#          port: adb-tcp
#      livenessProbe:
#        httpGet:
#          path: /
#          port: adb-tcp
  restartPolicy: Always
