kubernetes/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busy-box
  namespace: demo
  labels:
    app: busy-box
spec:
  containers:
    - name: busy-box
      image: busybox
      imagePullPolicy: IfNotPresent
      args:
        - /bin/sh
        - -c
        - sleep 999999
  restartPolicy: Always
