kubernetes/redroid-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: redroid11-test
  namespace: default
  labels:
    app: redroid11-test
spec:
  volumes:
    - name: data
      emptyDir: {}
  containers:
    - name: redroid
      image: redroid/redroid:11.0.0-latest
      resources: {}
      volumeMounts:
        - name: data
          mountPath: /data
      readinessProbe:
        exec:
          command:
            - /system/bin/sh
            - '-c'
            - test "1" = "`/system/bin/getprop sys.boot_completed`"
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        successThreshold: 1
        failureThreshold: 3
      imagePullPolicy: IfNotPresent
      securityContext:
        privileged: true
  restartPolicy: Always
  nodeName: minikube
